--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             </ul>
         </aside>
     </div>
+<!-- Sound Effects -->
+<audio id="flip-sound" src="flip.mp3"></audio>
+<audio id="match-sound" src="match.mp3"></audio>
+<audio id="win-sound" src="win.mp3"></audio>
+<audio id="background-music" src="background.mp3" loop></audio>
 
     <script src="script.js"></script>
 </body>
